# CarIActerologie-Streamlit

./: .env.example  .gitignore  .pre-commit-config.yaml  .slugignore  CI_CD_SETUP.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  Procfile  README.md  app.json  chroma_script.py  conversations.db  create_subchapter_vectorstore.py  demo_chunks_display.py  my_streamlit_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-dev.bat  run-prod.bat  setup.sh  simple_streaming_test.py  test_error_handling.py  test_graceful_degradation.py  test_retry_logic.py  test_retry_simple.py  test_streaming_performance.py  users.db
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
.streamlit/: config.toml  secrets.toml
APP DOC/: PR_SIMPLIFICATION.md
auth/: __init__.py  streamlit_auth.py  user_manager.py
config/: app_config.py  prompts.py  settings.py  welcome_config.py
config/environments/: __init__.py  development.py  production.py
core/: callbacks.py  langgraph_qa_chain.py  llm_setup.py
index_stores/traite_subchapters_faiss/: index.faiss
infrastructure/: __init__.py
infrastructure/config/: __init__.py  prompts.py  settings.py
infrastructure/config/environments/: __init__.py  development.py  production.py
infrastructure/database/vectorstores/traite_subchapters_faiss/: index.pkl
infrastructure/monitoring/: __init__.py  logging_service.py
infrastructure/resilience/: __init__.py  retry_service.py
services/: __init__.py  simple_user_session.py
services/ai_service/: __init__.py  domain_content.py  fallback_service.py  llm_client.py  models.py  qa_engine.py
services/auth_service/: __init__.py  auth_manager.py  models.py  user_repository.py
services/chat_service/: __init__.py  conversation_manager.py  memory_repository.py  models.py
services/ui_service/: __init__.py  callback_handlers.py  chat_interface.py  chunks_renderer.py
tests/: __init__.py  test_api_key_config.py  test_callbacks.py  test_chunks_display.py  test_circuit_breaker.py  test_collection_migration.py  test_config.py  test_conversation_manager.py  test_database_migration.py  test_environments.py  test_error_messages.py  test_graceful_degradation.py  test_memory.py  test_microservices.py  test_qa_chain.py  test_retry_logic.py  test_retry_simple.py  test_welcome_message.py
tools/performance/: streaming_benchmark.py
utils/: chunks_display.py  conversation_manager.py  fallback_responses.py  logging_config.py  retry_utils.py  streamlit_helpers.py
